image gallery height gap fixed

--- a/unsplash-app/src/components/image-card/image-card.styles.modules.scss
+++ b/unsplash-app/src/components/image-card/image-card.styles.modules.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   height: min-content;
+  margin: 5px;
+  display: inline-block;
 
   h3 {
     position: absolute;
